--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <div id="image">
-    'shhs'
+  
   </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-<script>$('#image').append('akk')</script>
+<script>$('#image').append('<img src=')</script>
 </body>
